<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="sync_app_name">Firefox Sync</string>
  <string name="sync_title_connect">Connect to Sync</string>
  <string name="sync_title_pair">Pair a Device</string>

  <!-- JPAKE Key Screen -->
  <string name="sync_subtitle_connect">From a Firefox Sync-connected computer, go to Sync options and select "Add a device"</string>
  <string name="sync_subtitle_pair">From the device to be paired, go to Sync options and select "Pair a device"</string>
  <string name="sync_pin_default">...\n...\n...\n</string>
  <string name="sync_link_show"><a href="https://support.mozilla.com/en-US/kb/add-a-device-to-firefox-sync">Show me how</a></string>
  <string name="sync_link_nodevice"><a href="#">I\'m not near my computer…</a></string>

  <!-- Account Login Screen -->
  <string name="sync_subtitle_account">Enter your Firefox Sync account information</string>
  <string name="sync_input_username">Account Name</string>
  <string name="sync_input_password">Password</string>
  <string name="sync_input_key">Recovery Key</string>
  <string name="sync_checkbox_server">Use custom server</string>
  <string name="sync_input_server">Server URL</string>
  
  <!-- Setup Fail -->
  <string name="sync_title_fail">Cannot Set Up Sync</string>
  <string name="sync_subtitle_fail">Firefox Sync could not connect to the server. Would you like to try again?</string>
  <string name="sync_button_tryagain">Try again</string>
  <string name="sync_button_manual">Manual Setup</string>
  
  <!-- Setup Success -->
  <string name="sync_title_success">Setup Complete</string>
  <string name="sync_subtitle_success">Your data is now being encrypted and synchronized in the background.</string>
  <string name="sync_settings">Settings</string>
  
  <!-- Common text -->
  <string name="sync_button_cancel">Cancel</string>
  <string name="sync_button_connect">Connect</string>
  
  <!-- Account strings -->
  <string name="sync_account_label">Firefox Sync</string>
  
  <!-- Bookmark folder strings -->
  <string name="menu">Bookmarks Menu</string>
  <string name="places"></string>
  <string name="tags">Tags</string>
  <string name="toolbar">Bookmarks Toolbar</string>
  <string name="unfiled">Unsorted Bookmarks</string>
  <string name="desktop">Desktop Bookmarks</string>
  <string name="mobile">Mobile Bookmarks</string>
</resources>
