<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/TextFrame" >

  <TextView
    style="@style/TextTitle"
    android:text="@string/sync_title_connect" />

  <View
    android:layout_height="2dp"
    android:background="#FFFFFF" />

  <TextView
    style="@style/TextItem"
    android:text="@string/sync_subtitle_account" />

  <EditText android:id="@+id/username"
    style="@style/EditItem"
    android:hint="@string/sync_input_username" />

  <EditText android:id="@+id/password"
    style="@style/EditItem"
    android:password="true"
    android:hint="@string/sync_input_password" />

  <EditText android:id="@+id/key"
    style="@style/EditItem"
    android:hint="@string/sync_input_key" />

  <CheckBox android:id="@+id/checkbox_server"
    android:text="@string/sync_checkbox_server" />

  <EditText android:id="@+id/server"
    style="@style/EditItem"
    android:editable="false"
    android:cursorVisible="false"
    android:hint="@string/sync_input_server" />

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <Button
      style="@style/ButtonCommon"
      android:onClick="cancelClickHandler"
      android:text="@string/sync_button_cancel" />

    <Button
      style="@style/ButtonCommon"
      android:onClick="connectClickHandler"
      android:text="@string/sync_button_connect" />

  </LinearLayout>

</TableLayout>
