<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/TextFrame" >

  <TextView android:id="@+id/setup_title"
    style="@style/TextTitle"
    android:text="@string/sync_title_connect" />

  <View
    android:layout_width="wrap_content"
    android:layout_height="2dp"
    android:background="#FFFFFF" />

  <TextView android:id="@+id/setup_subtitle"
    style="@style/TextItem"
    android:text="@string/sync_subtitle_connect" />

  <TextView
    style="@style/TextItem"
    android:autoLink="web"
    android:clickable="true"
    android:text="@string/sync_link_show" />

  <LinearLayout
    style="@style/TextItem"
    android:orientation="vertical" >

    <TextView android:id="@+id/text_pin"
      style="@style/TextItem"
      android:text="@string/sync_pin_default"
      android:textSize="40dp" />

  </LinearLayout>

  <TextView android:id="@+id/link_nodevice"
    style="@style/TextItem"
    android:clickable="true"
    android:onClick="manualClickHandler"
    android:text="@string/sync_link_nodevice" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
      style="@style/ButtonCommon"
      android:onClick="cancelClickHandler"
      android:text="@string/sync_button_cancel" />

  </LinearLayout>

</TableLayout>
