<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SyncTextFrame" >
    <TextView
      style="@style/SyncTextTitle"
      android:text="@string/sync_title_fail" />

    <TextView
      style="@style/SyncTextItem"
      android:text="@string/sync_subtitle_fail" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                style="buttonStyle"
                android:onClick="tryAgainClickHandler"
                android:text="@string/sync_button_tryagain" />

            <Button
                style="buttonStyle"
                android:onClick="manualClickHandler"
                android:text="@string/sync_button_manual" />
        </LinearLayout>

        <Button
            style="buttonStyle"
            android:onClick="cancelClickHandler"
            android:text="@string/sync_button_cancel" />
    </LinearLayout>

</TableLayout>
