<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SyncLayout" >

    <LinearLayout
        android:id="@+id/success_top"
        style="@style/SyncTop" >
        <ImageView
            android:src="@drawable/sync_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/SyncTextTitle"
            android:text="@string/sync_title_success" />
    </LinearLayout>
    <TextView
        android:id="@+id/setup_success_subtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/success_top"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/sync_subtitle_success" />

    <TextView
        android:id="@+id/link_pair"
        style="@style/SyncLinkItem"
        android:gravity="center"
        android:layout_below="@id/setup_success_subtitle"
        android:layout_gravity="center|bottom"
        android:onClick="pairClickHandler"
        android:text="@string/sync_title_pair" />

    <LinearLayout
        style="@style/SyncBottom" >
        <Button
        style="@style/SyncButton"
        android:onClick="settingsClickHandler"
        android:text="@string/sync_settings" />
    </LinearLayout>

</RelativeLayout>